# vector-index-sizer

./: README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: sample.txt
src/vector_index_sizer/: __init__.py  __main__.py  cli.py  core.py  models.py  rules.py
tests/: test_vector_index_sizer.py
